--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,34 @@
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg">
-  <p class="navbar-brand">TaskBoard</p>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-          <a routerLink="/projects">Projects</a>
-      </li>
-    </ul>
-</nav>
-<!--/.Navbar-->
+<header class="mb-5">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      
+      <ul class="navbar-nav mr-auto" >
+        <li class="nav-item">
+          <a class="nav-link" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="project" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Mijn Projecten</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 
-<router-outlet></router-outlet>
+<!-- Begin page content -->
+<main class="container pt-5">
+  <router-outlet></router-outlet>
+</main>
+
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">Bart Koks & Tim Westland</span>
+  </div>
+</footer>
