--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -3,16 +3,16 @@
         
         <div class="col-md-6">
             <form (ngSubmit)="login()">
-            <h3>Firebase Login</h3>
+            <h3>Log in op TaskBoard</h3>
             <div class="form-group p-2">
-            <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Enter email Id" required>
+            <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Emailadres" required>
         </div>
         <div class="form-group p-2">
-            <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Enter Password" required>
+            <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Wachtwoord" required>
         </div>
         <div class="form-group p-2">
-            <button type="submit" class="btn btn-primary">Login</button>
-            <div class="register"><a href="#" routerLink="/register">New User Register</a></div>
+            <button type="submit" class="btn btn-primary">Inloggen</button>
+            <div class="register"><a href="#" routerLink="/register">Registreer een nieuwe gebruiker.</a></div>
         </div>
         </form>
         <div class="form-group">
