--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,2 +1,1 @@
-<p>asdf works!</p>
-<button class="btn-danger" (click)="authservice.singout()">Logout</button>
+<button class="btn-danger" (click)="authservice.singout()">uitloggen</button>
