--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -2,17 +2,20 @@
     <div class="row justify-content-center p-4">
         <div class="col-md-6">
             <form (ngSubmit)="register()">
-            <h3>Firebase Register</h3>
+            <h3>Registreren</h3>
             <div class="form-group p-2">
-                <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Enter email Id" required>
+                <input type="text" name="name" class="form-control" [(ngModel)]="name" placeholder="Naam" required>
             </div>
             <div class="form-group p-2">
-                <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Enter Password"
+                <input type="email" name="email" class="form-control" [(ngModel)]="email" placeholder="Emailadres" required>
+            </div>
+            <div class="form-group p-2">
+                <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Wachtwoord"
                     required>
             </div>
             <div class="form-group p-2">
-                <button type="submit" class="btn btn-primary">Register</button>
-                <div class="register"><a href="#" routerLink="/login">Back To Login</a></div>
+                <button type="submit" class="btn btn-primary">Registreren</button>
+                <div class="register"><a href="#" routerLink="/login">Terug naar login</a></div>
             </div>
             </form>
             <div class="form-group">
