--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      
-      <ul class="navbar-nav mr-auto" >
+
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         </li>
@@ -16,6 +16,14 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="project" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Mijn Projecten</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{authservice.userData.email}}</a>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-danger" (click)="authservice.singout()">Uitloggen</button>
         </li>
       </ul>
     </div>
