--- a/src/app/modules/sprint/sprint-list/sprint-list.component.html
+++ b/src/app/modules/sprint/sprint-list/sprint-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12 mb-2">
         <h3 class="d-inline">Sprints</h3>
-        <a routerLink="sprint" class="btn btn-success d-inline-flex float-right">
+        <a routerLink="sprint/create" class="btn btn-success d-inline-flex float-right">
             Nieuwe sprint <span class="material-icons">add</span>
         </a>
     </div>
