--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,1 +1,1 @@
-<button class="btn-danger" (click)="authservice.singout()">uitloggen</button>
+<button class="btn-danger" (click)="authservice.SignOut()">uitloggen</button>
