--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -2,7 +2,7 @@
     <div class="row justify-content-center p-4">
         <div class="col-md-6">
             <form (ngSubmit)="register()">
-            <h3>Registreren</h3>
+            <h3 class="p-2">Registreren</h3>
             <div class="form-group p-2">
                 <input type="text" name="name" class="form-control" [(ngModel)]="name" placeholder="Naam" required>
             </div>
@@ -13,9 +13,13 @@
                 <input type="password" name="password" class="form-control" [(ngModel)]="password" placeholder="Wachtwoord"
                     required>
             </div>
-            <div class="form-group p-2">
-                <button type="submit" class="btn btn-primary">Registreren</button>
-                <div class="register"><a href="#" routerLink="/login">Terug naar login</a></div>
+            <div class="row p-2">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary">Registreren</button>
+                </div>
+                <div class="col">
+                    <a routerLink="/login" class="btn btn-outline-primary float-right">Terug naar inloggen</a>
+                </div>
             </div>
             </form>
             <div class="form-group">
