--- a/src/app/modules/project/project-view/project-view.component.html
+++ b/src/app/modules/project/project-view/project-view.component.html
@@ -1,2 +1,9 @@
 <app-sprint-list></app-sprint-list>
+<br/>
+<br/>
+<br/>
 <app-userstory-list></app-userstory-list>
+<br/>
+<br/>
+<br/>
+<app-user-list></app-user-list>
