--- a/src/app/modules/userstory/userstory-list/userstory-list.component.html
+++ b/src/app/modules/userstory/userstory-list/userstory-list.component.html
@@ -1,4 +1,4 @@
-<hr/>
+<hr />
 <div class="row">
     <div class="col-12 mb-2">
         <h3 class="d-inline">Userstories</h3>
@@ -6,34 +6,85 @@
             Nieuwe userstory <span class="material-icons">add</span>
         </a>
     </div>
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="default-tab" data-toggle="tab" href="#default" role="tab"
+                aria-controls="default" aria-selected="true">Userstories</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link" id="acrchive-tab" data-toggle="tab" href="#acrchive" role="tab" aria-controls="acrchive"
+                aria-selected="false">Archief</a>
+        </li>
+    </ul>
+    <br />
     <div class="col-12">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Naam</th>
-                    <th scope="col">Omschrijving</th>
-                    <th scope="col">status</th>
-                    <th scope="col">story points</th>
-                    <th scope="col">eigenaar</th>
-                </tr>
-            </thead>
-            <tbody id="sprint">
-                <tr *ngFor="let u of userstories | async">
-                    <td>{{ u.name }}</td>
-                    <td>{{ u.description }}</td>
-                    <td>{{ u.status }}</td>
-                    <td>{{ u.storyPoints }}</td>
-                    <td>{{ u.owner }}</td>
-                    <td>
-                        <a [routerLink]="[u.key]" class="btn btn-success d-inline-flex mr-2">
-                            Bekijken <span class="material-icons">visibility</span>
-                        </a>
-                        <a [routerLink]="['edit', u.key]" class="btn btn-primary d-inline-flex mr-2">
-                            Bewerken <span class="material-icons">edit</span>
-                        </a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="tab-content">
+            <div class="tab-pane fade show active" id="default" role="tabpanel" aria-labelledby="default-tab">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Naam</th>
+                            <th scope="col">Omschrijving</th>
+                            <th scope="col">status</th>
+                            <th scope="col">story points</th>
+                            <th scope="col">eigenaar</th>
+                            <th scope="col">sprint</th>
+                        </tr>
+                    </thead>
+                    <tbody id="sprint">
+                        <tr *ngFor="let u of userstories | async">
+                            <td>{{ u.name }}</td>
+                            <td>{{ u.description }}</td>
+                            <td>{{ u.status }}</td>
+                            <td>{{ u.storyPoints }}</td>
+                            <td>{{ u.owner }}</td>
+                            <td>{{ u.sprint }}</td>
+                            <td>
+                                <a [routerLink]="['edit', u.key]" class="btn btn-primary d-inline-flex mr-2">
+                                    Bewerken <span class="material-icons">edit</span>
+                                </a>
+                                <button (click)="ngArchive(u, u.key)" class="btn btn-danger d-inline-flex">
+                                    Archiveren <span class="material-icons">archive</span>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="tab-pane fade" id="acrchive" role="tabpanel" aria-labelledby="acrchive-tab">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Naam</th>
+                            <th scope="col">Omschrijving</th>
+                            <th scope="col">status</th>
+                            <th scope="col">story points</th>
+                            <th scope="col">eigenaar</th>
+                        </tr>
+                    </thead>
+                    <tbody id="sprint">
+                        <tr *ngFor="let u of archivedUserstories | async">
+                            <td>{{ u.name }}</td>
+                            <td>{{ u.description }}</td>
+                            <td>{{ u.status }}</td>
+                            <td>{{ u.storyPoints }}</td>
+                            <td>{{ u.owner }}</td>
+                            <td>
+                            <td>
+                                <button (click)="ngArchive(u, u.key)" class="btn btn-danger d-inline-flex">
+                                    De-archiveren <span class="material-icons">archive</span>
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+
+
+
+
+
 </div>
